--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.8
+dj-database-url==2.2.0
 Django==5.0.6
+django-heroku==0.3.1
 dnspython==2.6.1
 firebase-admin==6.5.0
 google-api-core==2.19.1
@@ -26,6 +28,7 @@ msgpack==1.0.8
 mysql-connector-python==9.0.0
 proto-plus==1.24.0
 protobuf==4.25.3
+psycopg2==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
@@ -37,6 +40,8 @@ requests==2.32.3
 rsa==4.9
 six==1.16.0
 sqlparse==0.5.0
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.2
+whitenoise==6.7.0
